--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -52,12 +52,15 @@ button:focus,
 input:focus {
   border: 0;
 }
+body{
+  background: var(--white300);
+  background: linear-gradient(90deg, var(--white300) 50%, rgba(255,255,255,1) 50%);
+}
 main{
   background: var(--white300);
   background: linear-gradient(90deg, var(--white300) 50%, rgba(255,255,255,1) 50%);
   display: flex;
   justify-content: center;
-  height: 100vh;
   width: 100%;
 }
 .container{
@@ -67,7 +70,6 @@ main{
   width: 100%;
 }
 .main_left, .main_right{
-  height: 100%;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -81,7 +83,11 @@ main{
   display: flex;
   flex-direction: column;
 }
-.container_data{}
+.container_data{
+  margin-top: 213px;
+  display: flex;
+  justify-content: center;
+}
 
 .container_data_welcome{
   color: var(--dark);
@@ -139,6 +145,7 @@ input[type="password"]{
 }
 .container_password p {
   color: var(--blue);
+  cursor: pointer;
   font-family: Lato;
   font-size: 14px;
   font-weight: 400;
@@ -169,6 +176,7 @@ form .login{
 form .google{
   background: var(--dark);
   color: var(--white);
+  margin-bottom: 162px;
 }
 form button{
   border-radius: 5px;
@@ -184,4 +192,17 @@ form button{
 }
 button img{
   margin-right: 11px;
+}
+.sign-up{
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  margin-bottom: 50px;
+  text-align: center;
+}
+.sign-up span{
+  color: var(--blue);
+  cursor: pointer;
 }
